--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     &nbsp
     <a href="https://www.instagram.com/i_m_samudra/" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://github.com/#/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
+    <a href="https://www.youtube.com/channel/UC7y81yZN6jSr65sDu4fLmmA" style="color: white;"><i class="fab fa-youtube" style="font-size: 2em;"></i></a>
+    &nbsp
+    <a href="https://github.com/Samudr4" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="https://www.linkedin.com/in/samudr4/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
     
