--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     &nbsp
     <a href="https://www.youtube.com/channel/UC7y81yZN6jSr65sDu4fLmmA" style="color: white;"><i class="fab fa-youtube" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://discord.gg/bs3hhBX74B" style="color: white;"><i class="fab fa-discord" style="font-size: 2em;"></i></a>
+    <a href="https://discord.gg/hc4y8fCqCD" style="color: white;"><i class="fab fa-discord" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="https://github.com/Samudr4" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
