--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <h3 style="font-family: 'Syncopate', sans-serif; font-weight: 20;">Samudra Saikia<a href="#" style="color:#B89EF1;"></a></h3><br>
         <hr style="width: 50%; background-color: #d195e9; border-color: #E83951;">
     
-    <a href="https://www.facebook.com/samudr4.fb/" style="color: white;"><i class="fab fa-facebook" style="font-size: 2em;"></i></a>
+    <a href="https://www.facebook.com/Purp1eXD/" style="color: white;"><i class="fab fa-facebook" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://www.instagram.com/i_m_samudra/" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a>
+    <a href="https://www.instagram.com/purp1exd/" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://www.youtube.com/channel/UC7y81yZN6jSr65sDu4fLmmA" style="color: white;"><i class="fab fa-youtube" style="font-size: 2em;"></i></a>
+    <a href="https://youtube.com/channel/UC7y81yZN6jSr65sDu4fLmmA" style="color: white;"><i class="fab fa-youtube" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="https://discord.gg/hc4y8fCqCD" style="color: white;"><i class="fab fa-discord" style="font-size: 2em;"></i></a>
     &nbsp
