--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <h3 style="font-family: 'Syncopate', sans-serif; font-weight: 20;">Samudra Saikia<a href="#" style="color:#B89EF1;"></a></h3><br>
         <hr style="width: 50%; background-color: #d195e9; border-color: #E83951;">
     
-    <a href="https://www.facebook.com/Purp1eXD/" style="color: white;"><i class="fab fa-facebook" style="font-size: 2em;"></i></a>
+    <a href="https://www.facebook.com/purp1e.io/" style="color: white;"><i class="fab fa-facebook" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://www.instagram.com/purp1exd/" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a>
+    <a href="https://www.instagram.com/samudr4.io/" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="https://youtube.com/channel/UC7y81yZN6jSr65sDu4fLmmA" style="color: white;"><i class="fab fa-youtube" style="font-size: 2em;"></i></a>
     &nbsp
@@ -33,7 +33,8 @@
     <a href="https://github.com/Samudr4" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="https://www.linkedin.com/in/samudr4/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
-    
+    &nbsp
+    <a href="https://drive.google.com/file/d/1Ft3HzZvcoUezisf_zzFV6ECiQ_p9G6IM/view?usp=sharing" style="color: white;"><i class="fab fa-Resume" style="font-size: 2em;"></i></a>
   </div>
 </div>
 
