--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div id="particles">
   <div id="intro">
       <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">< PURP1E /><a href="#" style="color: white;"></a></h2>
-      <h3 style="font-family: 'Syncopate', sans-serif; font-weight: 20;">Samudra Saikia<a href="#" style="color:#B89EF1;"></a></h3><br>
+      <h3 style="font-family: 'Syncopate', sans-serif; font-weight: 20;">Samudra K. Saikia<a href="#" style="color:#B89EF1;"></a></h3><br>
         <hr style="width: 50%; background-color: #d195e9; border-color: #E83951;">
     &nbsp
     <a href="https://www.instagram.com/samudr4.io/" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a>
