--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     &nbsp
     <a href="https://www.instagram.com/samudr4.io/" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://www.facebook.com/purp1e.io/" style="color: white;"><i class="fab fa-facebook" style="font-size: 2em;"></i></a>
+    <a href="https://www.facebook.com/samudr4.io/" style="color: white;"><i class="fab fa-facebook" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="https://youtube.com/channel/UC7y81yZN6jSr65sDu4fLmmA" style="color: white;"><i class="fab fa-youtube" style="font-size: 2em;"></i></a>
     &nbsp
