--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <a href="https://www.linkedin.com/in/samudr4/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
     
   </div>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0lD8juogbXloPSoZ7PQG65?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </div>
 
 </body>
