--- a/index.html
+++ b/index.html
@@ -1,58 +1,39 @@
-<!doctype html>
-<html lang="en" class="no-js">
+<!DOCTYPE html>
+<html data-bs-theme="light" lang="en" class="no-js">
+
 <head>
-  <base target="_blank">
-  <meta charset="UTF-8" />
-  <title>Welcome to Purp1eHaze</title>
-  <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" type="text/css">
-  <!-- remember, jQuery is completely optional -->
-  <!-- <script type='text/javascript' src='js/jquery-1.11.1.min.js'></script> -->
-  <script type="text/javascript" src="js/jquery.particleground.js"></script>
-  <script type="text/javascript" src="js/demo.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Welcome to Purp1eHaze</title>
+    <meta name="twitter:card" content="summary">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/img/favicon.webp">
+    <meta name="twitter:image" content="assets/img/favicon.webp">
+    <link rel="icon" type="image/webp" sizes="200x200" href="assets/img/favicon.webp">
+    <link rel="icon" type="image/webp" sizes="200x200" href="assets/img/favicon.webp" media="(prefers-color-scheme: dark)">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body>
-
-<div id="particles">
-  <div id="intro">
-      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">< PURP1E /><a href="#" style="color: white;"></a></h2>
-      <h3 style="font-family: 'Syncopate', sans-serif; font-weight: 20;">Samudra K. Saikia<a href="#" style="color:#B89EF1;"></a></h3><br>
-        <hr style="width: 50%; background-color: #d195e9; border-color: #E83951;">
-    &nbsp
-    <a href="https://www.instagram.com/samudr4.io/" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a>
-    &nbsp
-    <a href="https://www.facebook.com/samudr4.io/" style="color: white;"><i class="fab fa-facebook" style="font-size: 2em;"></i></a>
-    &nbsp
-    <a href="https://youtube.com/channel/UC7y81yZN6jSr65sDu4fLmmA" style="color: white;"><i class="fab fa-youtube" style="font-size: 2em;"></i></a>
-    &nbsp
-    <a href="https://twitter.com/purp1exd" style="color: white;"><i class="fab fa-twitter" style="font-size: 2em;"></i></a>
-    &nbsp
-    <a href="https://discord.gg/hc4y8fCqCD" style="color: white;"><i class="fab fa-discord" style="font-size: 2em;"></i></a>
-    &nbsp
-    <a href="https://github.com/Samudr4" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
-    &nbsp
-    <a href="https://www.linkedin.com/in/samudr4/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
-    
-  </div>
-  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0lD8juogbXloPSoZ7PQG65?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-</div>
-
-</body>
-
-
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-212443004-1">
-</script>
-<script>
+    <!-- Start: Spotify Embedded Album Compact (size 80px x 100%) --><div class="col"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0lD8juogbXloPSoZ7PQG65?autoplay=true&theme=0" allowtransparency="true" width="100%" height="152" frameBorder="0"allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="eager"></iframe></div><!-- End: Spotify Embedded Album Compact (size 80px x 100%) -->
+    <div id="particles">
+        <div id="intro"><h2 class="hover-color" style="font-family: 'Syncopate', sans-serif;font-weight: 10;">&lt; PURP1E /&gt;<a href="#" style="color: white;"></a></h2>
+            <h3 style="font-family:'Syncopate', sans-serif;font-weight:20;">Samudra K. Saikia<a href="#" style="color:#B89EF1;"></a></h3><!-- Start: Simple Typing Carousel -->
+            <div></div><!-- End: Simple Typing Carousel -->
+            <h1><span class="txt-rotate" data-period="1000" data-rotate='[ "Gamer.", "Video Editor.", "Freelancer." ]'></span></h1><a href="https://www.instagram.com/samudr4.io/" style="color:white;"><i class="fab fa-instagram" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a><a href="https://www.facebook.com/samudr4.io/" style="color:white;"><i class="fab fa-facebook" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a><a href="https://youtube.com/channel/UC7y81yZN6jSr65sDu4fLmmA" style="color:white;"><i class="fab fa-youtube" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a><a href="https://twitter.com/purp1exd" style="color:white;"><i class="fab fa-twitter" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a><a href="https://discord.gg/hc4y8fCqCD" style="color:white;"><i class="fab fa-discord" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a><a href="https://github.com/Samudr4" style="color:white;"><i class="fab fa-github" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a><a href="https://www.linkedin.com/in/samudr4/" style="color:white;"><i class="fab fa-linkedin" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a>
+        </div>
+    </div><script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-212443004-1');
 </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/script.min.js"></script>
+</body>
 
 </html>
