--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Welcome to Purp1eHaze</title>
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/favicon.png">
+    <meta property="og:image" content="./assets/img/favicon.webp">
     <meta name="twitter:image" content="assets/img/favicon.webp">
     <link rel="icon" type="image/webp" sizes="200x200" href="assets/img/favicon.webp">
     <link rel="icon" type="image/webp" sizes="200x200" href="assets/img/favicon.webp" media="(prefers-color-scheme: dark)">
