--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html data-bs-theme="light" lang="en" class="no-js">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Welcome to Purp1eHaze</title>
-    <meta name="twitter:card" content="summary">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="./assets/img/favicon.webp">
-    <meta name="twitter:image" content="assets/img/favicon.webp">
-    <link rel="icon" type="image/webp" sizes="200x200" href="assets/img/favicon.webp">
-    <link rel="icon" type="image/webp" sizes="200x200" href="assets/img/favicon.webp" media="(prefers-color-scheme: dark)">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
-</head>
-
-<body>
-    
-    <div id="particles">
-        <div id="intro"><h1 class="hover-color" style="font-family: 'Tilt Neon'">&lt; PURP1E /&gt;<a href="#index.html" style="color: white;"></a></h1>
-            <h3 style="font-family:'Syncopate', sans-serif;font-weight:20;">Samudra K. Saikia<a href="#" style="color:#B89EF1;"></a></h3><!-- Start: Simple Typing Carousel -->
-            <div></div><!-- End: Simple Typing Carousel -->
-            <h2><span class="txt-rotate" data-period="1000" data-rotate='[ "Gamer.", "Video Editor.", "Freelancer." ]'></h2></span><p><a href="https://www.instagram.com/samudr4.io/" style="color:white;"><i class="fab fa-instagram" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a><a href="https://www.facebook.com/samudr4.io/" style="color:white;"><i class="fab fa-facebook" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a><a href="https://youtube.com/channel/UC7y81yZN6jSr65sDu4fLmmA" style="color:white;"><i class="fab fa-youtube" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a><a href="https://twitter.com/purp1exd" style="color:white;"><i class="fab fa-twitter" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a><a href="https://discord.gg/hc4y8fCqCD" style="color:white;"><i class="fab fa-discord" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a><a href="https://github.com/Samudr4" style="color:white;"><i class="fab fa-github" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a><a href="https://www.linkedin.com/in/samudr4/" style="color:white;"><i class="fab fa-linkedin" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a></p>
-              
-        </div>
-    </div> <!-- Start: Spotify Embedded Album Compact (size 80px x 100%) --><div class="col"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0lD8juogbXloPSoZ7PQG65?autoplay=true&theme=0" allowtransparency="true" width="100%" height="152" frameBorder="0"allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="eager"></iframe></div><!-- End: Spotify Embedded Album Compact (size 80px x 100%) -->   
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <title>Welcome to Purp1eHaze</title>
+        <meta name="twitter:card" content="summary">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="./assets/img/favicon.webp">
+        <meta name="twitter:image" content="assets/img/favicon.webp">
+        <link rel="icon" type="image/webp" sizes="200x200" href="assets/img/favicon.webp">
+        <link rel="icon" type="image/webp" sizes="200x200" href="assets/img/favicon.webp" media="(prefers-color-scheme: dark)">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+        <link rel="stylesheet" href="assets/css/styles.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tilt+Neon&display=swap">
+    </head>
+    <body>
+        <div id="particles">
+            <div id="intro">
+                <h1 class="display-1 hover-color" style="font-family: 'Tilt Neon', cursive; margin-bottom: -64px; border-width: 289px;">&lt; PURP1E /&gt;</h1>
+                <h2 style="font-family:'Syncopate', sans-serif;font-weight:20;" class="display-5">Samudra K. Saikia<a href="#" style="color:#B89EF1;"></a></h2>
+                <!-- Start: Simple Typing Carousel -->
+                <div></div>
+                <!-- End: Simple Typing Carousel -->
+                <h2 class="display-3"><span class="txt-rotate" data-period="1000" data-rotate='[ "Gamer.", "Video Editor.", "Freelancer." ]'></h2>
+            </span>
+            <h6 class="h3"><a href="https://www.instagram.com/samudr4.io/" style="color:white;"><i class="fab fa-instagram" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a> <a href="https://www.facebook.com/samudr4.io/" style="color:white;"><i class="fab fa-facebook" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a> <a href="https://youtube.com/channel/UC7y81yZN6jSr65sDu4fLmmA" style="color:white;"><i class="fab fa-youtube" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a> <a href="https://twitter.com/purp1exd" style="color:white;"><i class="fab fa-twitter" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a> <a href="https://discord.gg/hc4y8fCqCD" style="color:white;"><i class="fab fa-discord" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a> <a href="https://github.com/Samudr4" style="color:white;"><i class="fab fa-github" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a> <a href="https://www.linkedin.com/in/samudr4/" style="color:white;"><i class="fab fa-linkedin" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a></h6><br><br>
+            <!-- Start: Spotify Embedded Album Compact (size 80px x 100%) -->
+            <div class="col">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0lD8juogbXloPSoZ7PQG65?autoplay=true&theme=0" allowtransparency="true" width="100%" height="152" frameBorder="0" llow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="eager"></iframe>
+            </div>
+            <!-- End: Spotify Embedded Album Compact (size 80px x 100%) -->             
+        </div>         
+    </div>     
     <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -39,5 +46,3 @@
     <script src="assets/js/script.min.js"></script>
     <script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
-
-</html>
