--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <div id="particles">
             <div id="intro">
-                <h1 class="display-1 hover-color" style="font-family: 'Tilt Neon', cursive; margin-bottom: -64px; border-width: 289px;">&lt; PURP1E /&gt;</h1>
+                <h1 class="display-1 hover-color" style="font-family: 'Tilt Neon', cursive; margin-bottom: -64px; border-width: 289px; font-size: 75px;">&lt; PURP1E /&gt;</h1>
                 <h2 style="font-family:'Syncopate', sans-serif;font-weight:20;" class="display-5">Samudra K. Saikia<a href="#" style="color:#B89EF1;"></a></h2>
                 <!-- Start: Simple Typing Carousel -->
                 <div></div>
@@ -27,13 +27,14 @@
                 <h2 class="display-3"><span class="txt-rotate" data-period="1000" data-rotate='[ "Gamer.", "Video Editor.", "Freelancer." ]'></h2>
             </span>
             <h6 class="h3"><a href="https://www.instagram.com/samudr4.io/" style="color:white;"><i class="fab fa-instagram" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a> <a href="https://www.facebook.com/samudr4.io/" style="color:white;"><i class="fab fa-facebook" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a> <a href="https://youtube.com/channel/UC7y81yZN6jSr65sDu4fLmmA" style="color:white;"><i class="fab fa-youtube" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a> <a href="https://twitter.com/purp1exd" style="color:white;"><i class="fab fa-twitter" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a> <a href="https://discord.gg/hc4y8fCqCD" style="color:white;"><i class="fab fa-discord" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a> <a href="https://github.com/Samudr4" style="color:white;"><i class="fab fa-github" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a> <a href="https://www.linkedin.com/in/samudr4/" style="color:white;"><i class="fab fa-linkedin" data-bss-hover-animate="pulse" style="font-size: 2em;padding: 6px;"></i></a></h6><br><br>
-                 
-        </div>         
-             <!-- Start: Spotify Embedded Album Compact (size 80px x 100%) -->
-            <div class="col">
+            <br>
+            <br>
+            <!-- Start: Spotify Embedded Album Compact (size 80px x 100%) -->
+            <div class="col" style="top: -83px;">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0lD8juogbXloPSoZ7PQG65?autoplay=true&theme=0" allowtransparency="true" width="100%" height="152" frameBorder="0" llow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="eager"></iframe>
             </div>
-            <!-- End: Spotify Embedded Album Compact (size 80px x 100%) -->       
+            <!-- End: Spotify Embedded Album Compact (size 80px x 100%) -->             
+        </div>         
     </div>     
     <script>
   window.dataLayer = window.dataLayer || [];
